--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,8 +7,9 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+
+ <H3>HOME PAGE</H3>
+ <h2> your status is : {{information}} </h2>
+ <button (click)="homeButtonMethod()" ion-button large>update status</button>
+
 </ion-content>
